--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -1,7 +1,9 @@
 <h1
- [ngStyle]="{'color': colo}"
+ [ngStyle]="{'color': color}"
 >My First AngularDart App</h1>
 
-{{colo}}
+{{bla}}
+
+{{color}}
 
 
